# BrainflowSpO2Algorithm

./: .gitignore  EmotiBit SpO2 to EB Oscilloscope.ahk  README.md  library.properties
pybind/: CMakeLists.txt
sit-stand-sit_v0.0.0/innovo_ip900ap/: EmotiBit_UN.csv  scores.txt
src/: BrainflowSpO2Algorithm.cpp  BrainflowSpO2Algorithm.h  bindings.cpp  libraries.json  run.py  spo2_algorithm.cpp  spo2_algorithm.h  update_dependencies.py
